--- a/content/paths.html
+++ b/content/paths.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8">
-    <title>LU05.A01 - Pfade</title>
-  </head>
-  <body>
-    <main>
-      <div>
-        <!-- TODO image01.png -->
-      </div>
-      <div>
-        <!-- TODO song01.mp3 -->
-      </div>
-      <div>
-        <!-- /image02.png -->
-      </div>
-      <div>
-        <!-- image03.png -->
-      </div>
-      <div>
-        <!-- TODO Video "HTML: Relative und Absolute Links" von Phlow -->
-        <iframe width="560" height="315" src="TODO" title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-      </div>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>LU05.A01 - Pfade</title>
+</head>
+<body>
+<main>
+  <div>
+    <img src="./img/image01.png"   alt="Hello World" width="487">
+  </div>
+  <div>
+    <audio src="./audio/song01.mp3" controls></audio>
+  </div>
+  <div>
+    <img src="../image02.png" alt="helloWorld.html" height="372">
+  </div>
+  <div>
+    <img src="./image03.png" alt="Blockly"/>
+  </div>
+  <div>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PhTp17k5hFY" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+  </div>
+</main>
+</body>
 </html>
